succesfully adding images

--- a/_works/2023-02-02-project-a.md
+++ b/_works/2023-02-02-project-a.md
@@ -1,6 +1,10 @@
 ---
 layout: post
-title: Grid by Design
+title: LSF Cogito "Call for Papers"
 ---
 
-porvooo
+Every academic year, [Lingkar Studi Filsafat Cogito](https://lsfcogito.org) publishes two issues of an anthology *Jurnal Cogito*. It contains of selected scholarly articles written by communities and students throughout Indonesia. The "Call for Papers" posters began as an outlet for artistic expression among this literacy circle. Established in May 2014, LSF Cogito community was still young. Due to its small network, the distribution of physical posters was limited to a few campuses of major universities in Java.
+
+I understand that the main, primary task of a poster is not to be read, but to draw attention so that the audience may read. I figured that the one important thing that a busy audience like university students need to see is "why and what is this poster here about". Visual elements were reduced to a minimum to emphasize intelligibility and clarity. I also presented the contrasting difference in hierarchy to convey the purpose, then the details follow.
+
+![2016 poster](/assets/img/w-cfp16.png)
