--- a/_works/2023-02-02-project-a.md
+++ b/_works/2023-02-02-project-a.md
@@ -3,6 +3,7 @@ layout: work
 title: LSF Cogito "Call for Papers"
 kala: "2016, 2017, 2018"
 ---
+![square posters](/assets/img/w-cfpsq.png)
 
 Every academic year, [Lingkar Studi Filsafat Cogito](https://lsfcogito.org) publishes two issues of an anthology *Jurnal Cogito*. It contains of selected scholarly articles written by communities and students throughout Indonesia. The "Call for Papers" posters began as an outlet for artistic expression among this literacy circle. Established in May 2014, LSF Cogito community was still young. Due to its small network, the distribution of physical posters was limited to a few campuses of major universities in Java.
 
