--- a/_works/2023-02-02-project-a.md
+++ b/_works/2023-02-02-project-a.md
@@ -2,6 +2,8 @@
 layout: work 
 title: LSF Cogito "Call for Papers"
 kala: "2016, 2017, 2018"
+permalink: "/works/cfp/"
+thumb: "w-cfpsq.png"
 ---
 ![square posters](/assets/img/w-cfpsq.png)
 
