--- a/_works/2023-02-02-project-a.md
+++ b/_works/2023-02-02-project-a.md
@@ -1,18 +1,27 @@
 ---
-layout: work 
+layout: work
 title: LSF Cogito "Call for Papers"
 kala: "2016, 2017, 2018"
 permalink: "/works/cfp/"
 thumb: "w-cfpsq.png"
 ---
-![square posters](/assets/img/w-cfpsq.png)
 
-Every academic year, [Lingkar Studi Filsafat Cogito](https://lsfcogito.org) publishes two issues of an anthology *Jurnal Cogito*. It contains of selected scholarly articles written by communities and students throughout Indonesia. The "Call for Papers" posters began as an outlet for artistic expression among this literacy circle. Established in May 2014, LSF Cogito community was still young. Due to its small network, the distribution of physical posters was limited to a few campuses of major universities in Java.
+Every academic year, [Lingkar Studi Filsafat Cogito](https://lsfcogito.org) publishes two issues of an anthology _Jurnal Cogito_. It contains of selected scholarly articles written by communities and students throughout Indonesia. The "Call for Papers" posters began as an outlet for artistic expression among this literacy circle. Established in May 2014, LSF Cogito community was still young. Due to its small network, the distribution of physical posters was limited to a few campuses of major universities in Java region.
 
 I understand that the main, primary task of a poster is not to be read, but to draw attention so that the audience may read. I figured that the one important thing that a busy audience like university students need to see is "why and what is this poster here about". Visual elements were reduced to a minimum to emphasize intelligibility and clarity. I also presented the contrasting difference in hierarchy to convey the purpose, then the details follow.
 
+{% figure caption:"2016" %}
 ![2016 poster](/assets/img/w-cfp16.png)
+{% endfigure %}
 
+{% figure caption:"2017" %}
 ![2017 poster](/assets/img/w-cfp17.png)
+{% endfigure %}
 
+{% figure caption:"2018" %}
 ![2018 poster](/assets/img/w-cfp18.png)
+{% endfigure %}
+
+{% figure caption:"The 'Instagram-proportioned' 1:1 version is also available for each" %}
+![square posters](/assets/img/w-cfpsq.png)
+{% endfigure %}
