change titles on /works to use curly quotes

--- a/_works/2023-02-02-project-a.md
+++ b/_works/2023-02-02-project-a.md
@@ -1,6 +1,6 @@
 ---
 layout: work
-title: LSF Cogito "Call for Papers"
+title: LSF Cogito “Call for Papers”
 kala: "2016, 2017, 2018"
 permalink: "/works/cfp/"
 thumb: "w-cfpsq.png"
